--- a/config/codecs.ini
+++ b/config/codecs.ini
@@ -1,5 +1,5 @@
 [video]
-codec_copy = h264,h265,mpeg2video
+codec_copy = h264,h265,hevc,mpeg2video
 transcode = libx264 -preset ultrafast -crf 22
 
 [audio]
