--- a/config/codecs.ini
+++ b/config/codecs.ini
@@ -6,6 +6,9 @@ transcode = libx264 -preset ultrafast -crf 22
 codec_copy = ac3,aac,mp2
 transcode = aac
 
+[ffmpeg]
+threads = 0
+
 # codec_copy = ac3,aac.48000,mp2
 # transcode = mp2 -b:a 224k
 
