--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /subprojects/mINI-0.9.14/
 /subprojects/tiny-process-library-4bf0e59e64f18d3080a1ce4e853775de2181e993/
 
+/subprojects/mINI-0.9.14/
+/subprojects/packagecache/
+/subprojects/spdlog-1.12.0/
+/subprojects/tiny-process-library-4bf0e59e64f18d3080a1ce4e853775de2181e993/
