rewrite the complete m3u handling

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /subprojects/packagecache/
 /subprojects/spdlog-1.12.0/
 /subprojects/tiny-process-library-4bf0e59e64f18d3080a1ce4e853775de2181e993/
+/analyze/
